--- a/main_page.html
+++ b/main_page.html
@@ -2,7 +2,7 @@
 <html lang="en-UA">
 
 	<head>
-		<link rel="stylesheet" type="text/css" href="styles.css">
+		<link rel="stylesheet" type="text/css" href="main_page_styles.css">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Main site</title>
@@ -20,7 +20,12 @@
 			<section class="section235 border">
 				<section class="section23 border">
 					<section class="section2 item-right border">
-						<p>2</p>
+						<ul> Links for other pages of the site:
+							<li><a href="">1</a></li>
+							<li><a href="">2</a></li>
+							<li><a href="">3</a></li>
+							<li><a href="">4</a></li>
+						</ul>
 					</section>
 
 					<section class="section3 item-right border">
@@ -41,7 +46,7 @@
 
 
 		<footer class="left-center border">
-			<h3 id="y" class="border">Y</h3>
+			<h3 class="border">Y</h3>
 			<p>6</p>
 		</footer>
 	</body>
