Made 4 copies of main page

--- a/copy2.html
+++ b/copy2.html
@@ -11,7 +11,7 @@
 
 	<body class="body_style">
 		<header class="left-center">
-			<h3 id="x" class="border">This is main page</h3>
+			<h3 id="x" class="border">This is copy 2</h3>
 			<p>This is a paragraph<br>with two lines</p>
 		</header>
 
@@ -21,15 +21,15 @@
 				<section class="section23 border">
 					<section class="section2 item-right border">
 						<ul class="links-list"> Links for other pages of the site:
+							<li><a href="main_page.html">Main page</a></li>
 							<li><a href="copy1.html">The first copy</a></li>
-							<li><a href="copy2.html">The second copy</a></li>
 							<li><a href="copy3.html">The third copy</a></li>
 							<li><a href="copy4.html">The fourth copy</a></li>
 						</ul>
 					</section>
 
 					<section class="section3 border">
-						<img src="icon.jpg" alt="Fear of the Dark" width="100%" height="100%">
+						<img src="icon2.jpg" alt="Fear of the Dark" width="100%" height="100%">
 					</section>
 				</section>
 
