Change font size

--- a/copy2.html
+++ b/copy2.html
@@ -20,7 +20,7 @@
 			<section class="section235 border">
 				<section class="section23 border">
 					<section class="section2 item-right border">
-						<ul class="links-list"> Links for other pages of the site:
+						<ul> Links for other pages of the site:
 							<li><a href="main_page.html">Main page</a></li>
 							<li><a href="copy1.html">The first copy</a></li>
 							<li><a href="copy3.html">The third copy</a></li>
@@ -29,7 +29,7 @@
 					</section>
 
 					<section class="section3 border">
-						<img src="icon2.jpg" alt="Fear of the Dark" width="100%" height="100%">
+						<img src="icon2.jpg" alt="The Number of the Beast" width="100%" height="100%">
 					</section>
 				</section>
 
