--- a/main_page.html
+++ b/main_page.html
@@ -20,7 +20,7 @@
 			<section class="section235 border">
 				<section class="section23 border">
 					<section class="section2 item-right border">
-						<ul class="links-list"> Links for other pages of the site:
+						<ul> Links for other pages of the site:
 							<li><a href="copy1.html">The first copy</a></li>
 							<li><a href="copy2.html">The second copy</a></li>
 							<li><a href="copy3.html">The third copy</a></li>
