--- a/TheNumberOfTheBeast.html
+++ b/TheNumberOfTheBeast.html
@@ -25,7 +25,7 @@
 				<section class="section23 border">
 					<section class="section2 item-right border">
 						<ul class="links-list"> Посилання:
-							<li><a href="main_page.html">Вступ</a></li>
+							<li><a href="index.html">Вступ</a></li>
 							<li><a href="IronMaiden.html">Iron Maiden</a></li>
 							<li><a href="FearOfTheDark.html">Fear of the Dark</a></li>
 							<li><a href="BraveNewWorld.html">Brave New World</a></li>
