--- a/TheNumberOfTheBeast.html
+++ b/TheNumberOfTheBeast.html
@@ -12,11 +12,7 @@
 	<body class="body_style">
 		<header class="left-center">
 			<h3 id="x" class="border">The Number of the Beast</h3>
-			<p>The Number of the Beast — третій студійний альбом англійського хеві-метал гурту Iron Maiden. Він був випущений 22 березня 1982 року у Великій Британії на EMI Records і в Сполучених Штатах на Harvest і Capitol Records. Альбом був їхнім першим, у якому брав участь вокаліст Брюс Дікінсон, і останнім із барабанщиком Клайвом Барром .
-
-На підтримку альбома був здійснений тур The Beast on the Road.
-
-У 2022 році, до 40-річчя виходу альбому, Number Of The Beast був названий №1 у списку «25 найкращих рок-гітарних альбомів 1982 року» у Guitar World.</p>
+			<p>The Number of the Beast — третій студійний альбом англійського хеві-метал гурту Iron Maiden. Він був випущений 22 березня 1982 року у Великій Британії на EMI Records і в Сполучених Штатах на Harvest і Capitol Records. Альбом був їхнім першим, у якому брав участь вокаліст Брюс Дікінсон, і останнім із барабанщиком Клайвом Барром. У 2022 році, до 40-річчя виходу альбому, Number Of The Beast був названий №1 у списку «25 найкращих рок-гітарних альбомів 1982 року» у Guitar World.</p>
 		</header>
 
 
