Fixed images layout

--- a/index.html
+++ b/index.html
@@ -29,23 +29,22 @@
 					</section>
 
 					<section class="section3 border">
-						<!-- <p>Iron Maiden — британський рок-гурт з Лейтона, Лондон, заснований у 1975 році. Гурт вважають одними із найпопулярніших і найвагоміших виконавців у стилі хеві-метал, частиною «Нової хвилі британського важкого металу» (NWOBHM). Iron Maiden продав більше 120 мільйонів альбомів у всьому світі; три з них досягли першого місця і 15 потрапили в Тор 10 хіт-параді одної лише Британії.Iron Maiden — британський рок-гурт з Лейтона, Лондон, заснований у 1975 році. Гурт вважають одними із найпопулярніших і найвагоміших виконавців у стилі хеві-метал, частиною «Нової хвилі британського важкого металу» (NWOBHM). Iron Maiden продав більше 120 мільйонів альбомів у всьому світі; три з них досягли першого місця і 15 потрапили в Тор 10 хіт-параді одної лише Британії.Iron Maiden — британський рок-гурт з Лейтона, Лондон, заснований у 1975 році. Гурт вважають одними із найпопулярніших і найвагоміших виконавців у стилі хеві-метал, частиною «Нової хвилі британського важкого металу» (NWOBHM). Iron Maiden продав більше 120 мільйонів альбомів у всьому світі; три з них досягли першого місця і 15 потрапили в Тор 10 хіт-параді одної лише Британії.Iron Maiden — британський рок-гурт з Лейтона, Лондон, заснований у 1975 році. Гурт вважають одними із найпопулярніших і найвагоміших виконавців у стилі хеві-метал, частиною «Нової хвилі британського важкого металу» (NWOBHM). Iron Maiden продав більше 120 мільйонів альбомів у всьому світі; три з них досягли першого місця і 15 потрапили в Тор 10 хіт-параді одної лише Британії.Iron Maiden — британський рок-гурт з Лейтона, Лондон, заснований у 1975 році. Гурт вважають одними із найпопулярніших і найвагоміших виконавців у стилі хеві-метал, частиною «Нової хвилі британського важкого металу» (NWOBHM). Iron Maiden продав більше 120 мільйонів альбомів у всьому світі; три з них досягли першого місця і 15 потрапили в Тор 10 хіт-параді одної лише Британії.</p> -->
-						<img src="icon1.jpg" alt="Iron Maiden" width="49%" height="49%" usemap="#IronMaiden">
+						<img src="icon1.jpg" alt="Iron Maiden" usemap="#IronMaiden">
 						<map name="IronMaiden">
 							<area shape="rect" coords="0,0,325,324" href="IronMaiden.html" alt="IronMaiden">
 						</map>
 
-						<img src="icon2.jpg" alt="The Number of the Beast" width="49%" height="49%" usemap="#TheNumberOfTheBeast">
+						<img src="icon2.jpg" alt="The Number of the Beast" usemap="#TheNumberOfTheBeast">
 						<map name="TheNumberOfTheBeast">
 							<area shape="rect" coords="0,0,325,324" href="TheNumberOfTheBeast.html" alt="TheNumberOfTheBeast">
 						</map>
 						
-						<img src="icon.jpg" alt="Fear of the Dark" width="49%" height="49%" usemap="#FearOfTheDark">
+						<img src="icon.jpg" alt="Fear of the Dark" usemap="#FearOfTheDark">
 						<map name="FearOfTheDark">
 							<area shape="rect" coords="0,0,325,324" href="FearOfTheDark.html" alt="FearOfTheDark">
 						</map>
 						
-						<img src="icon4.jpg" alt="Brave New World" width="49%" height="49%" usemap="#BraveNewWorld">
+						<img src="icon4.jpg" alt="Brave New World" usemap="#BraveNewWorld">
 						<map name="BraveNewWorld">
 							<area shape="rect" coords="0,0,325,324" href="BraveNewWorld.html" alt="BraveNewWorld">
 						</map>
