Add preview_img class for main page

--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
 					</section>
 
 					<section class="section3 border">
-						<img src="icon1.jpg" alt="Iron Maiden" usemap="#IronMaiden">
+						<img src="icon1.jpg" class="preview_img" alt="Iron Maiden" usemap="#IronMaiden">
 						<map name="IronMaiden">
 							<area shape="rect" coords="0,0,325,324" href="IronMaiden.html" alt="IronMaiden">
 						</map>
 
-						<img src="icon2.jpg" alt="The Number of the Beast" usemap="#TheNumberOfTheBeast">
+						<img src="icon2.jpg" class="preview_img" alt="The Number of the Beast" usemap="#TheNumberOfTheBeast">
 						<map name="TheNumberOfTheBeast">
 							<area shape="rect" coords="0,0,325,324" href="TheNumberOfTheBeast.html" alt="TheNumberOfTheBeast">
 						</map>
 						
-						<img src="icon.jpg" alt="Fear of the Dark" usemap="#FearOfTheDark">
+						<img src="icon.jpg" class="preview_img" alt="Fear of the Dark" usemap="#FearOfTheDark">
 						<map name="FearOfTheDark">
 							<area shape="rect" coords="0,0,325,324" href="FearOfTheDark.html" alt="FearOfTheDark">
 						</map>
 						
-						<img src="icon4.jpg" alt="Brave New World" usemap="#BraveNewWorld">
+						<img src="icon4.jpg" class="preview_img" alt="Brave New World" usemap="#BraveNewWorld">
 						<map name="BraveNewWorld">
 							<area shape="rect" coords="0,0,325,324" href="BraveNewWorld.html" alt="BraveNewWorld">
 						</map>
