Fixed body layout

--- a/BraveNewWorld.html
+++ b/BraveNewWorld.html
@@ -36,7 +36,7 @@
 				</section>
 
 
-				<section class="section5">
+				<section class="section5 border">
 					<p>Мої улюблені композиції: Blood Brothers, The Wicker Man, The Mercenary</p>
 				</section>
 			</section>
