--- a/FearOfTheDark.html
+++ b/FearOfTheDark.html
@@ -36,7 +36,7 @@
 				</section>
 
 
-				<section class="section5">
+				<section class="section5 border">
 					<p>Мої улюблені композиції: Afraid to Shoot Strangers, Wasting Love, Fear of the Dark</p>
 				</section>
 			</section>
