--- a/IronMaiden.html
+++ b/IronMaiden.html
@@ -34,7 +34,7 @@
 				</section>
 
 
-				<section class="section5">
+				<section class="section5 border">
 					<p>Мої улюблені композиції: Prowler, Iron Maiden</p>
 				</section>
 			</section>
@@ -54,7 +54,7 @@
 		</main>
 
 
-		<footer class="left-center border">
+		<footer class="left-center border>
 			<h3 class="border">Лабораторна робота №1</h3>
 			<p><em>Виконав Присяжний Андрій, ІП-22, всі матеріали взято з Вікіпедії.</em></p>
 		</footer>
